--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>edXBee</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span><img src="assets/img/edXBee.jpg" class="img-logo" /></span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -89,12 +89,22 @@
         <div class="beeconnect">
           <p id="beeconnect_head"> How you can BeeConnected </p>
           <p id="beeconnect_body"> To get things buzzing, all you have to do is register your institute. To get started… </p>
-          <span><a href="#">Click here <i class="icofont-arrow-right "></i></a></span>
+          <span class="popup" onclick="myFunction()">
+            <a>Click here <i class="icofont-arrow-right "></i><a>
+            <span class="popuptext" id="myPopup">Popup Goes Here!</span>
+          </span>
         </div>
       </div>
     </div>
   </div>
 </section><!-- End Hero -->
+<script>
+// When the user clicks on div, open the popup
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
 
 <main id="main">
 
@@ -135,7 +145,7 @@
     <!-- End Clients Section -->
     <!-- ======= Services Section ======= -->
     <section class="services">
-      <div class="container">
+      <div class="container ">
         <div class="row mx-auto">
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -387,6 +397,7 @@
         <div class="col-md-12 d-flex align-items-stretch">
           <div class="card text-center" style='background-color: #FFCF35' data-aos="fade-up" data-aos-delay="100">
             <div class="card-body">
+              <img class="d-block p1" src="assets/img/logo/p1.jpg" />
               <h5 class="card-title">What are bee doing</h5>
               <hr style="max-width: 150px;
               background-color: #FFFFFF;
@@ -1111,11 +1122,14 @@
         <div class="col-lg-2 col-md-2 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
           <div class="info">
             <h6>Follow us</h6>
-            <div class="social-links">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a><br>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a><br>
-              <a href="#" class="instagram"><i class="icofont-instagram"></i></a><br>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a><br>
+            <div >
+			  <a href="#"><img src="assets/img/facebook.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Facebook</a><br>
+			  <a href="#"><img src="assets/img/instagram.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instagram</a><br>
+              <a href="#"><img src="assets/img/twitter.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Twitter</a><br>
+              <a href="#"><img src="assets/img/youtube.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Youtube</a><br>
+			  <a href="#"><img src="assets/img/tiktok.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tiktok</a><br>
+			  <a href="#"><img src="assets/img/skype.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skype</a><br>
+			  <a href="#"><img src="assets/img/whatsapp.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Whatsapp</a><br>
             </div>
 
           </div>
