--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span><img src="assets/img/edXBee.jpg" class="img-logo" /></span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span><img src="assets/img/header-logo.png" class="img-logo" /></span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -84,7 +84,7 @@
       
       <div class="imagewrap">
         <button class="btn-watch-video"><i class="ri-play-fill"></i> Watch Video</button>
-        <img src="assets/img/kids-learning.jpeg"alt="" width="100%">
+        <img src="assets/img/kids-learning.png"alt="" width="100%">
 
         <div class="beeconnect">
           <p id="beeconnect_head"> How you can BeeConnected </p>
@@ -150,7 +150,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="title1div">
-                <center><div class="icon"><i class="bx bxl-dribbble"></i></div></center>
+                <center><div class="icon"><img src="assets/img/training.png"></div></center>
               </div>
               <h4 class="title1" ><a href="">Trainer Enterprise</a></h4>
               <p class="description1">Are you a Qualified Trainer and want to benefit from that both locally and internationally?
@@ -163,7 +163,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="title1divmid">
-                <center><div class="icon"><i class="bx bx-file"></i></div></center>
+                <center><div class="icon"><img src="assets/img/student.png"></div></center>
               </div>
               <h4 class="title1"><a href="">Students</a></h4>
               <p class="description1">Are you the BigBee or the QueenBee in your institute? You are now at a place that truly appreciates your hardwork and insights.</p>
@@ -175,7 +175,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="title1div">
-                <center><div class="icon"><i class="bx bx-tachometer"></i></div></center>
+                <center><div class="icon"><img src="assets/img/virtual.png"></div></center>
               </div>
               <h4 class="title1"><a href="">Virtual Tests</a></h4>
               <p class="description1">We are focused at primarily conducting secured online exams. We achieve this through…</p>
@@ -307,7 +307,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-                <div class="icon" style="background-color: yellow;"><i class="bx bx-user"></i></div>
+                <div class="icon" style="background-color:#FFC200;"><img src="assets/img/user.png"></div>
                 <div class="card-body">
                   <h5 class="card-title">User</h5>
                   <p class="card-text">Allow the freedom to seamlessly integrate yourself from cumbersome duties to organized workflows.</p>
@@ -320,7 +320,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-                <div class="icon" style="background-color: black;"><i class="bx bx-user"></i></div>
+                <div class="icon" style="background-color: black;"><img src="assets/img/examination.png"></div>
                 <div class="card-body">
                   <h5 class="card-title">Examination</h5>
                   <p class="card-text">Join others as they discover the ease of operations related to creating, distributing and publishing examinations with WES.</p>
@@ -333,7 +333,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-                <div class="icon" style="background-color: yellow;"><i class="bx bx-user"></i></div>
+                <div class="icon" style="background-color: #FFC200;"><img src="assets/img/proctoring.png"></div>
                 <div class="card-body">
                   <h5 class="card-title">Proctoring</h5>
                   <p class="card-text">Take a stand, as we embark
@@ -349,7 +349,7 @@ function myFunction() {
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
              <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-              <div class="icon" style="background-color: black;"><i class="bx bx-user"></i></div>
+              <div class="icon" style="background-color: black;"><img src="assets/img/interface.png" style="height: 45px;"></div>
               <div class="card-body">
                 <h5 class="card-title">Interface</h5>
                 <p class="card-text">User interface is designed based on anticipating what a user might want to do ensuring that the interface incorporates elements which are easy to access.</p>
@@ -362,7 +362,7 @@ function myFunction() {
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
           <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-              <div class="icon" style="background-color: yellow;"><i class="bx bx-user"></i></div>
+              <div class="icon" style="background-color: #FFC200;"><img src="assets/img/security.png"></i></div>
               <div class="card-body">
                 <h5 class="card-title">Security</h5>
                 <p class="card-text">The team behind WES consists of foreign nationals. Why? Because of security.</p>
@@ -375,7 +375,7 @@ function myFunction() {
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
           <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="card text-center" style="width: 18rem; padding-top: 25px;">
-              <div class="icon" style="background-color: black;"><i class="bx bx-user"></i></div>
+              <div class="icon" style="background-color: black;"><img src="assets/img/infinite.png" style="height: 45px;"></div>
               <div class="card-body">
                 <h5 class="card-title">Infinite</h5>
                 <p class="card-text">If knowledge is everything, why should there be borders for expansion. Welcome to limitless services.</p>
@@ -396,8 +396,7 @@ function myFunction() {
       <div class="row">
         <div class="col-md-12 d-flex align-items-stretch">
           <div class="card text-center" style='background-color: #FFCF35' data-aos="fade-up" data-aos-delay="100">
-            <div class="card-body">
-              <img class="d-block p1" src="assets/img/logo/p1.jpg" />
+            <div class="card-body" style="background-image: url('assets/img/bee-do-background.png');">
               <h5 class="card-title">What are bee doing</h5>
               <hr style="max-width: 150px;
               background-color: #FFFFFF;
