--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@ function myFunction() {
       <div class="row">
         <div class="col-md-12 d-flex align-items-stretch">
           <div class="card text-center" style='background-color: #FFCF35' data-aos="fade-up" data-aos-delay="100">
+            <!--img class="p1" src="assets/img/path7.jpg" /-->
             <div class="card-body">
-              <img class="d-block p1" src="assets/img/logo/p1.jpg" />
               <h5 class="card-title">What are bee doing</h5>
               <hr style="max-width: 150px;
               background-color: #FFFFFF;
@@ -503,35 +503,27 @@ function myFunction() {
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
-        <div class="section-title" data-aos="fade-up">
-          <h2>BeeFuture</h2>
-          <hr>
-        </div>
-
-        <div  data-aos="fade-up" data-aos-delay="200" style="max-height: 400px;">
-
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" style="max-height: 400px;" src="assets/img/testimonials/crousel.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" style="max-height: 400px;" src="assets/img/testimonials/crousel.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" style="max-height: 400px;" src="assets/img/testimonials/crousel.jpg" alt="Third slide">
+          <div class="testimonial-wrap">  
+            <div class="section-title" data-aos="fade-up">
+              <h2>BeeFuture</h2>
+              <hr>
+            </div>   
+            
+            <div class="block2">
+              <div class="note">
+                <p>LMS</p>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+            <div class="block3">
+              <div class="note">
+                <p class="topic">Virtual Class Room</p>
+                <p class="des">he core objective of edXBee is to provide a cloud based platform incorporating very conceiveable function currently required for both VET and Non-VET organizations including Training Management, Learning Management, E-Learning, E-commerce and regulatory needs.</p>
+              </div>
+            </div>
           
+          </div>
+        <div  data-aos="fade-up" data-aos-delay="200" style="max-height: 400px;"></div>  
+
 
           <!-- <div class="testimonial-wrap">
             <div class="testimonial-item">
@@ -546,9 +538,7 @@ function myFunction() {
             </div>
           </div> -->
 
-        </div>
-
-      </div>
+        </div>      
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Portfolio Section ======= -->
