--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ function myFunction() {
     </section> -->
     <!-- End Clients Section -->
     <!-- ======= Services Section ======= -->
-    <section class="services">
-      <div class="container ">
+    <section class="services" style="background-color: #EEF3F4;">
+      <div class="container">
         <div class="row mx-auto">
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -706,12 +706,12 @@ function myFunction() {
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container">
-
         <div class="section-title" data-aos="fade-up">
           <h2>Frequently Asked Questions</h2>
           <hr>
         </div>
-
+        <img src="assets/img/small-ball.png" style="position: relative; left:-300px;">
+        <!-- <img src="assets/img/big-ball.png" style="position: relative; left:300px;"> -->
         <div class="row">
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
