--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ function myFunction() {
             <hr> -->
           </div>
 
-          <div class="row content" style="background-image: url('assets/img/about.jpg');width: 100%; background-size: cover;">
+          <div class="row content" style="background-image: url('assets/img/about.JPG');width: 100%; background-size: cover;">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150" style="height: 450px;">
               <h3 style="font-family: Playfair Display;
               font-style: normal;
